# pacmod2_game_control

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
.circleci/: config.yml
include/pacmod_game_control/: pacmod_game_control_node.h
launch/: pacmod2_game_control.launch  pacmod2_game_control.launch.xml
src/: controllers.cpp  pacmod_game_control_node.cpp  startup_checks.cpp
