<?xml version="1.0"?>
<package format="2">
  <name>pacmod2_game_control</name>
  <version>4.0.0</version>
  <description>ROS Package for controlling the AStuff PACMod2 with a Joystick</description>
  <license>MIT</license>

  <url type="repository">https://github.com/astuff/pacmod2_game_control</url>
  <url type="bugtracker">https://github.com/astuff/pacmod2_game_control/issues</url>

  <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Development Team</maintainer>
  <author email="jdriscoll@autonomoustuff.com">Joe Driscoll</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pacmod_msgs</depend>
  <depend>joy</depend>
</package>
